fix: prevent layout shift from scrollbar

--- a/src/style.css
+++ b/src/style.css
@@ -76,8 +76,13 @@ button {
   --navbar-height: 80px;
 }
 
+html {
+  scrollbar-gutter: stable;
+}
+
 body {
   font-family: sans-serif;
+  background-color: var(--color-primary);
 }
 
 h1 {
@@ -93,7 +98,7 @@ nav {
   grid-template-columns: 48px repeat(3, 96px);
   height: var(--navbar-height);
   gap: var(--padding);
-  padding: 0 var(--padding-double) 0;
+  padding-left: var(--padding-double);
   background-color: var(--color-primary);
 }
 
@@ -120,8 +125,7 @@ nav button:hover {
   color: var(--color-white);
   display: flex;
   flex-direction: column;
-  min-height: calc(100vh - var(--navbar-height));
-  width: 100vw;
+  align-items: center;
 }
 
 .hero-container {
@@ -146,7 +150,6 @@ nav button:hover {
   grid-template-columns: repeat(2, 480px);
   grid-template-rows: repeat(2, 480px);
   gap: var(--padding-double);
-  margin: 0 auto 0;
   width: fit-content;
 }
 
@@ -195,9 +198,9 @@ nav button:hover {
 
 .section {
   width: 1280px;
-  margin: 0 auto 0;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: var(--padding-double);
   padding: var(--padding-double) var(--padding) var(--padding-double);
 }
